# JetPage

./: .gitignore  Containerfile  Makefile  README.md  ci.sh  pyproject.toml
content/: _meta.json  index.md
content/api-reference/: _meta.json  index.md
content/getting-started/: configuration.md  index.md  installation.md
content/guides/: _meta.json  gherkin-example.md  index.md
content/how-i-made-this/: _meta.json  architecture.md  challenges.md  index.md  phases.md
content/reference/: index.md
docs/superpowers/plans/: 2026-03-28-git-docs-sync.md
docs/superpowers/specs/: 2026-03-28-git-docs-sync-design.md
features/: parser.feature
features/steps/: parser_steps.py
jetpage/: config.py  main.py
jetpage/content/: cache.py  loader.py  parser.py
jetpage/content/extensions/: math.py
jetpage/core/: document.py  nav.py  navigation.py  page_resolver.py  search.py  sync.py
jetpage/export/: pdf_exporter.py  pdf_server.py  toc_builder.py
jetpage/ui/: app_shell.py  sidebar.py
jetpage/ui/controls/: code_block.py  nav_controls.py  toc_panel.py
sitegen/content/: code_splitter.py  image_processor.py  loader.py
sitegen/core/: navigation.py
sitegen/export/: pdf_exporter.py
sitegen/ui/: app_shell.py  sidebar.py
sitegen/ui/controls/: code_block.py  nav_controls.py  toc_panel.py
tests/: conftest.py  test_document.py  test_math_extension.py  test_nav.py  test_page_resolver.py  test_search.py  test_sync.py
tests/e2e/: conftest.py  test_routing.py
