[project]
name = "jetpage"
version = "0.1.0"
description = "Generate websites from markdown content using Flet"
authors = [
    {name = "JetPage"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet (>=0.82.2,<0.83.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "pymdown-extensions (>=10.21,<11.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "pypdf (>=6.8.0,<7.0.0)"
]

[project.scripts]
jetpage = "jetpage.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"features/**" = ["F401"]  # behave steps use wildcard-style imports

[dependency-groups]
dev = [
    "behave (>=1.3.3,<2.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pyright (>=1.1.396)"
]
